# scala-gazelle

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  tree-sitter_cdeps.patch
jvm/: BUILD  config.go  constants.go  resolve.go
parse/: BUILD  caching.go
scala/: BUILD  config.go  constants.go  lang.go  main.go  parser.go  parser_test.go
scala/testdata/: BUILD  README.md
scala/testdata/parser_integration/: BUILD
scala/testdata/parser_integration/fsqio/: Lists.json  Lists.scala  Query.json  Query.scala  TrivialORMQueryTest.json  TrivialORMQueryTest.scala
scala/testdata/parser_integration/scalac/: Global.json  Global.scala  Implicits.json  Implicits.scala  Namers.json  Namers.scala
scala/testdata/parser_integration/spark/: AgnosticEncoder.json  AgnosticEncoder.scala  GeneralizedLinearRegression.json  GeneralizedLinearRegression.scala  SparkSession.json  SparkSession.scala
scala/testdata/plugin_integration/: maven_install.json
scala/testdata/plugin_integration/example_module/src/main/scala/com/example/binary/: BUILD.out
scala/testdata/plugin_integration/example_module/src/main/scala/com/example/library1/: BUILD.out
scala/testdata/plugin_integration/example_module/src/main/scala/com/example/library1/subpackage/: BUILD.out
scala/testdata/plugin_integration/example_module/src/main/scala/com/example/library2/: BUILD.out  HelloJsonHelper.scala
scala/testdata/plugin_integration/example_module/src/test/scala/com/example/library1/subpackage/: BUILD.out
scala/testdata/plugin_integration/example_module/src/test/scala/com/example/library2/test/: BUILD.out
scala/testdata/plugin_module_integration/example_module/: BUILD.in  BUILD.out
scala/testdata/plugin_module_integration/example_module/src/main/scala/com/example/binary/: HelloRunner.scala
scala/testdata/plugin_module_integration/example_module/src/main/scala/com/example/library1/: Hello.scala
scala/testdata/plugin_module_integration/example_module/src/main/scala/com/example/library1/subpackage/: HelloHelper.scala
scala/testdata/plugin_module_integration/example_module/src/main/scala/com/example/library2/: HelloJsonMessage.scala
scala/testdata/plugin_module_integration/example_module/src/test/scala/com/example/library1/subpackage/: HelloHelperTest.scala
scala/testdata/plugin_module_integration/example_module/src/test/scala/com/example/library2/test/: HelloJsonHelperTest.scala
