bazel_dep(name = "gazelle", version = "0.43.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.54.0", repo_name = "io_bazel_rules_go")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_emirpasic_gods",
    "com_github_smacker_go_tree_sitter",
)

# Patch in a cc_library for some header files needed to build go-tree-sitter; see
# https://github.com/bazelbuild/rules_python/issues/2573 for details.
go_deps.module_override(
    patches = ["//:tree-sitter_cdeps.patch"],
    path = "github.com/smacker/go-tree-sitter",
)
