module(
    name = "scala_gazelle",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "gazelle", version = "0.43.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.54.0", repo_name = "io_bazel_rules_go")

# Picks up a fix to have rules_go propagate header files as transitive deps, which
# removes the need to patch go-tree-sitter's generated BUILD files in order to compile.
# Once this change lands in a mainline rules_go release (presumably in either 0.54.2 or
# 0.55.0), we can upgrade and this override can go away.
#
# See https://github.com/bazel-contrib/bazel-gazelle/issues/2059 for details.
archive_override(
    module_name = "rules_go",
    integrity = "sha256-fd1dlvf3B/50VNJ2f1y8sF0QZMH45n2DPIZRtdQvdTc=",
    strip_prefix = "rules_go-393faea31d43012fbb7887dfbddb869cb5cf58f5",
    urls = [
        "https://github.com/bazel-contrib/rules_go/archive/393faea31d43012fbb7887dfbddb869cb5cf58f5.zip",
    ],
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_emirpasic_gods",
    "com_github_smacker_go_tree_sitter",
)
